<resources>
    <string name="app_name">Priyo Go</string>
    <string name="priyo_copyright">Copyright 2017 Priyo, Inc. All Rights Reserved.</string>
    <string name="all_rights_reserved">All Rights Reserved. </string>
    <string name="progress_dialog_text_logging_in">Signing in...</string>
    <string name="progress_dialog_text_fetching_stranger">Fetching People...</string>
    <string name="progress_dialog_text_fetching_business">Fetching Business List...</string>
    <string name="progress_dialog_text_fetching_people">Fetching People List...</string>
    <string name="progress_dialog_text_fetching_news">Fetching News...</string>
    <string name="progress_dialog_text_post_news">Posting your news...</string>
    <string name="title_activity_contact">Contacts</string>
    <string name="title_activity_priyo_news">News</string>
    <string name="title_activity_sign_up">Signup</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_priyo_category_news">News Category</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_saved_news">Saved News</string>
    <string name="title_activity_business">Business</string>
    <string name="title_activity_business_details">Business Profile</string>
    <string name="title_activity_people_search">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_business_sub_category">Business</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_activity_notification_details">Details</string>
    <string name="title_activity_about_us">About</string>
    <string name="title_activity_news_post">Post Your News</string>
    <string name="accept_permission_for_camera">Please Accept Camera Permission!</string>
    <string name="tour_page_title">Find your favorite things</string>
    <string name="tour_page_text">news, people, business, places, jobs, offers and many more</string>
    <string name="failed_msg_common">Could not fetch data! Please try again later.</string>
    <string name="tour_button_text">"LET'S GO"</string>
    <string name="log_in">GET CODE</string>
    <string name="get_code">Get Code</string>
    <string name="prompt_mobile">Enter Following Information.</string>
    <string name="prompt_mobile_number">Mobile Number</string>
    <string name="contact_support">CONTACT SUPPORT</string>
    <string name="otp_going_to_send_sign_up">We have sent you a code via sms, please enter it below and press done</string>
    <string name="enter_otp">Enter Code</string>
    <string name="resend">Resend</string>
    <string name="done">Done</string>
    <string name="resend_otp_description">If you have not received the SMS, please press Resend Code after the time elapses.</string>
    <string name="registration_yourself">If you love to share your details by your self, just fill-up the followings.</string>
    <string name="name">Name</string>
    <string name="district">District</string>
    <string name="full_name">Full Name</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="update_profile">Update Profile</string>
    <string name="facebook_button_text">"UPDATE VIA FACEBOOK"</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed. Please check your user name and password.</string>
    <string name="otp_sent">OTP sent. Please wait...</string>
    <string name="progress_dialog_text_sending_sms">Sending SMS to your mobile...</string>
    <string name="no_internet_connection">No internet connection. Please check your connection.</string>
    <string name="error_invalid_mobile_number">Please enter a valid mobile number</string>
    <string name="otp_request_failed">Could not send OTP. Please try again</string>
    <string name="server_down">Can not process your request right now. Please try again later</string>
    <string name="otp_going_to_send">We have sent you a code via sms, please enter it below and press verify</string>
    <string name="error_invalid_otp">Please enter the OTP sent to your mobile</string>
    <string name="service_not_available">Service Currently Not Available</string>
    <string name="sign_up_with_ipay">Sign Up with iPay</string>
    <string name="contacts_sync_failed">Contacts Sync Failed</string>
    <string name="search">Search</string>
    <string name="please_log_in_again">Please log in again</string>
    <string name="failed_add_friend">Add friend failed</string>
    <string name="failed_update_friend">Update friend failed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1606245873012723</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="banner_ad_unit_id">ca-app-pub-4699014280714646/3156280671</string>
    <string name="error_invalid_name">Please enter name</string>
    <string name="error_invalid_birthday">Please enter birthday</string>
    <string name="please_select_a_gender">Please select a gender</string>
    <string name="updating_profile">Updating Profile Info.</string>
    <string name="search_view">Search People</string>
    <string-array name="day_of_week">
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
    </string-array>
    <string-array name="month_name">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="title_activity_news_details">DETAILS</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="sync_account_type">go.priyo.com</string>
    <string name="content_authority">"com.priyo.go"</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_a_district">Select District</string>
    <string name="select_a_thana">Select Thana</string>
    <string name="select_a_profession">Select Profession</string>
    <string name="loading">Loading... </string>
    <string name="failed_loading_thana_list">Failed to load thana list</string>
    <string name="failed_loading_district_list">Failed to load district list</string>
    <string name="failed_loading_profession_list">Failed to load profession list</string>
    <string name="no_contacts">No Contacts Available</string>
    <string name="no_verified_contacts">No verified contacts available in your account</string>
    <string name="about_me">About Me</string>
    <string name="user_description_hint">Write something about you</string>
    <string name="dob_update_info">Share Your Date of Birth to Get Horoscope Updates</string>
    <string name="profession">Profession</string>
    <string name="professional_background">Profession Background</string>
    <string name="organization_name">Organization Name</string>
    <string name="location_live_in">Location Live in</string>
    <string name="thana">Thana</string>
    <string name="share_professional_background">Share Your Professional Background to get Business, Job and Career Related Updates</string>
    <string name="share_location">Share Your Location to Get News, Recent offer etc. Around You</string>
    <string name="company_logo_description">Priyo.com</string>
    <string name="prompt_full_name">Full Name</string>
</resources>