<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activity.profile.UpdateProfileActivity"
    tools:showIn="@layout/activity_update_profile">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/update_profile_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/value5"
                android:paddingLeft="@dimen/value5"
                android:paddingRight="@dimen/value5"
                android:paddingStart="@dimen/value5"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="#666666"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/user_full_name_edit_text"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value20"
                android:paddingEnd="@dimen/value5"
                android:paddingLeft="@dimen/value5"
                android:paddingRight="@dimen/value5"
                android:paddingStart="@dimen/value5"
                android:text="@string/dateOfBirth"
                android:textAllCaps="true"
                android:textColor="#666666"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dip"
                android:paddingEnd="@dimen/value5"
                android:paddingLeft="@dimen/value5"
                android:paddingRight="@dimen/value5"
                android:paddingStart="@dimen/value5"
                android:text="@string/dob_update_info"
                android:textColor="#80B1EA"
                android:textSize="12sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/user_date_of_birth_edit_text"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center_vertical"
                android:hint="@string/dateOfBirth"
                android:inputType="datetime" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value20"
                android:paddingEnd="@dimen/value5"
                android:paddingLeft="@dimen/value5"
                android:paddingRight="@dimen/value5"
                android:paddingStart="@dimen/value5"
                android:text="@string/gender"
                android:textAllCaps="true"
                android:textColor="#666666"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/user_gender_edit_text"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@mipmap/dropdown"
                android:drawableRight="@mipmap/dropdown"
                android:focusable="false"
                android:gravity="center_vertical"
                android:hint="@string/gender"
                android:inputType="textPostalAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value20"
                android:paddingEnd="@dimen/value5"
                android:paddingLeft="@dimen/value5"
                android:paddingRight="@dimen/value5"
                android:paddingStart="@dimen/value5"
                android:text="@string/about_me"
                android:textAllCaps="true"
                android:textColor="#666666"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/user_description_edit_text"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/user_description_hint"
                android:inputType="textPostalAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value20"
                android:paddingEnd="@dimen/value5"
                android:paddingLeft="@dimen/value5"
                android:paddingRight="@dimen/value5"
                android:paddingStart="@dimen/value5"
                android:text="@string/location_live_in"
                android:textAllCaps="true"
                android:textColor="#666666"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dip"
                android:paddingEnd="@dimen/value5"
                android:paddingLeft="@dimen/value5"
                android:paddingRight="@dimen/value5"
                android:paddingStart="@dimen/value5"
                android:text="@string/share_location"
                android:textColor="#80B1EA"
                android:textSize="12sp"
                android:textStyle="italic" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/district_edit_text"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:drawableEnd="@mipmap/dropdown"
                    android:drawableRight="@mipmap/dropdown"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/district"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/thana_edit_text"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:drawableEnd="@mipmap/dropdown"
                    android:drawableRight="@mipmap/dropdown"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/thana"
                    android:inputType="textPostalAddress" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/value5"
                    android:paddingLeft="@dimen/value5"
                    android:paddingRight="@dimen/value5"
                    android:paddingStart="@dimen/value5"
                    android:text="@string/professional_background"
                    android:textAllCaps="true"
                    android:textColor="#666666"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:gravity="center"
                    android:paddingEnd="@dimen/value5"
                    android:paddingLeft="@dimen/value5"
                    android:paddingRight="@dimen/value5"
                    android:paddingStart="@dimen/value5"
                    android:text="@string/share_professional_background"
                    android:textColor="#80B1EA"
                    android:textSize="12sp"
                    android:textStyle="italic" />


                <EditText
                    android:id="@+id/profession_edit_text"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:drawableEnd="@mipmap/dropdown"
                    android:drawableRight="@mipmap/dropdown"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/profession"
                    android:inputType="text"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/organization_edit_text"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/organization_name"
                    android:inputType="text"
                    android:maxLines="1" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/update_profile_button"
        style="@style/PrimaryTransparentButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/primary_button_height"
        android:layout_alignParentBottom="true"
        android:text="@string/update_profile"
        android:textAllCaps="true"
        android:textSize="13sp" />

</RelativeLayout>