<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackgroundPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <!--To prevent EditText from gaining focus, focusable has been set to true -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/otp_going_to_send_sign_up" />

            <View style="@style/Divider" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/otp_edit_text"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/enter_otp"
                    android:inputType="number">

                    <requestFocus />
                </EditText>

            </android.support.design.widget.TextInputLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin">

                <Button
                    android:id="@+id/otp_resend_button"
                    style="@style/ButtonStyleMedium"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/primary_button_height"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_card"
                    android:layout_marginRight="@dimen/value2"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/resend" />

                <Button
                    android:id="@+id/otp_verification_button"
                    style="@style/ButtonStyleMedium"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/primary_button_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/value2"
                    android:layout_marginRight="@dimen/activity_horizontal_margin_card"
                    android:layout_weight="1"
                    android:text="@string/done" />
            </LinearLayout>

            <TextView
                android:id="@+id/timer_text_view"
                style="@style/TextStylePrimaryMedium"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_weight="1.0"
                android:gravity="bottom|center"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/resend_otp_description" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
